not working on iphone

--- a/public/css/player.css
+++ b/public/css/player.css
@@ -1,3 +1,8 @@
+.player-btn, .track-item {
+  touch-action: manipulation;
+  -webkit-tap-highlight-color: transparent;
+}
+
 .player-btn {
   font-size: 20px;
 }
