--- a/app/views/partials/artist.haml
+++ b/app/views/partials/artist.haml
@@ -1,7 +1,7 @@
 -url = admin == true ? "/admin/artist/#{artist.id}" : "/artist/#{artist.id}"
 -if use_small then
-  %a.item{href: "#{url_for url}"}
+  %a.item{href: "#{url_for url}", data: {"internal": true}}
     %img{title: "#{artist.name}", src: "#{url_for "/images/artists/sm/#{artist.image_path}"}"}
 -else
-  %a{href: "#{url_for url}"}
+  %a{href: "#{url_for url}", data: {"internal": "true"}}
     %img.img-responsive.fit-image#artist_image{title: "#{artist.name}", src: "#{url_for "/images/artists/#{artist.image_path}"}"}
