--- a/public/css/default.css
+++ b/public/css/default.css
@@ -8,9 +8,6 @@ body {
   height: 100%;
 }
 
-#tracklist {
- margin-top:46px;
-}
 
 td {
   font-size: 0.8em;
@@ -64,10 +61,6 @@ img {
   font-style:italic;
 }
 
-.track-title {
-  font-weight:bold;
-  color:#CF7C29;
-}
 
 .autocomplete-suggestion {
   background-color:#f8f8f8;
@@ -168,6 +161,6 @@ canvas {
 }
 
 .fit-image{
-  width: 100%;
+  height: 400px;
   object-fit: cover;
 }
