--- a/app/views/partials/newtag.haml
+++ b/app/views/partials/newtag.haml
@@ -1,4 +1,4 @@
-%form.form{id: "newtag"}
+%form.form{id: "newtag", data: {"internal": "true"}}
   .form-group
     %input.form-control{id: "tag", type: "text", name: "tag", placeholder: "Add Tag"}
     .submit
