--- a/app/views/stats.haml
+++ b/app/views/stats.haml
@@ -26,13 +26,13 @@
     %div#tabs
       %ul.nav.nav-tabs{role: "tablist"}
         %li.active{role: "presentation"}
-          %a{href: "#one_week", role: "tab", data: {toggle: "tag"}, aria: {controls: "one_week"}}
+          %a{href: "#one_week", role: "tab", data: {toggle: "tag"}, aria: {controls: "one_week"}, data: {"internal": "true"}}
             One Week
         %li{role: "presentation"}
-          %a{href: "#one_month", role: "tab", data: {toggle: "tag"}, aria: {controls: "one_month"}}
+          %a{href: "#one_month", role: "tab", data: {toggle: "tag"}, aria: {controls: "one_month"}, data: {"internal": "true"}}
             One Month
         %li{role: "presentation"}
-          %a{href: "#all_time", role: "tab", data: {toggle: "tag"}, aria: {controls: "all_time"}}
+          %a{href: "#all_time", role: "tab", data: {toggle: "tag"}, aria: {controls: "all_time"}, data: {"internal": "true"}}
             All Time
 
       .tab-content
