--- a/app/views/admin/model.haml
+++ b/app/views/admin/model.haml
@@ -1,7 +1,7 @@
 -if !model.album.nil?
-  %a{href: "#{url_for("/album/#{model.album.id}")}"}
+  %a{href: "#{url_for("/album/#{model.album.id}")}", data: {"internal": "data"}}
     =model.album.title
-%form{method: "POST", action:"#{url_for("/admin/#{model.class.to_s.downcase}/#{model.id}")}"}
+%form{method: "POST", action:"#{url_for("/admin/#{model.class.to_s.downcase}/#{model.id}")}", data: {"internal": "data"}}
   -model.editable_attributes.each do |k,v|
     .input-group.input-group-lg
       %span.input-group-addon
