--- a/app/views/paging.haml
+++ b/app/views/paging.haml
@@ -2,13 +2,13 @@
   -if model[:data].page_count > 1
     -unless (model[:data].current_page - 1) <= 0
       %li
-        %a{href:"#{url_for("#{base}/#{model[:data].current_page - 1}")}"}
+        %a{href:"#{url_for("#{base}/#{model[:data].current_page - 1}")}", data: {"internal": "true"}}
           &laquo;
     - page_seq(model[:data].current_page, model[:data].page_count).each do |page|
       %li{class: ("active" if page == model[:data].current_page)}
-        %a{href:"#{url_for("#{base}/#{page}")}"}
+        %a{href:"#{url_for("#{base}/#{page}")}", data: {"internal": "true"}}
           =page
     -unless (model[:data].current_page + 1) > model[:data].page_count
       %li
-        %a{href:"#{url_for("#{base}/#{model[:data].current_page + 1}")}"}
+        %a{href:"#{url_for("#{base}/#{model[:data].current_page + 1}")}", data: {"internal": "true"}}
           &raquo;
