--- a/app/views/partials/tags.haml
+++ b/app/views/partials/tags.haml
@@ -1,5 +1,5 @@
 -tags.each do |tag|
-  %form{class: "tagform#{tag.id}"}
+  %form{class: "tagform#{tag.id}", data: {"internal": "true"}}
     .input-group.input-group-lg
       %input.form-control{type:"text", name:"name", value: "#{tag.name}"} 
     .input-group.input-group-lg
