--- a/app/views/recent_albums.haml
+++ b/app/views/recent_albums.haml
@@ -2,15 +2,6 @@
 .albums
   -model[:data].each do |album|
     -next unless album.tracks.count > 0
-    %a.item{href: "#{url_for "/album/#{album.id}"}"}
+    %a.item{href: "#{url_for "/album/#{album.id}"}", data: {"internal": "true"}}
       %img.album{src: "#{url_for "/images/albums/#{album.image_path}"}", title: "#{album.title}"}
 :javascript
-  var container = document.querySelector('.albums');
-  var msnry = new Masonry( container, {
-    // options
-    columnWidth: 200,
-    itemSelector: '.item'
-  });
-  imagesLoaded(container, function() {
-    msnry.layout();
-  });
