--- a/app/views/artist.haml
+++ b/app/views/artist.haml
@@ -1,28 +1,8 @@
 !=haml :"partials/artist", locals: { artist: artist, admin: true, use_small: false }
 .artist
   .summary#summary
+    =summary['summary']
+    %a{target: "_", href:"#{summary['url']}"}
+      \...more at wikipedia
 -albums.each do |album|
   !=haml :"partials/album", locals: { album: album}
-:javascript
-  keypress_enable=false;
-  summary_loaded=false;
-  images_loaded=false;
-
-  function summary_done(data) {
-    var img_height = $('#artist_image')[0].offsetHeight;
-    $('#summary')[0].style.maxHeight = img_height.toString() + "px";
-    $('#summary').append("<h3>#{artist.name}</h3>");
-    $('#summary').append("<p class='text'>" + data.summary);
-    $('#summary').append("  <a target='_' href='" + data.url + "'>…more at wikipedia</a></p>");
-    summary_loaded = true;
-  }
-
-  $(document).attr("title", "#{artist.name}");
-  $('.navbar-info').html("<span class='artist-title'>#{artist.name}</span>");
-  var container = document.querySelector('.albums');
-
-  $(document).ready(function() {
-    get_summary("#{url_for("/artist/#{artist.id}/summary")}", summary_done, summary_loaded, "#summary");
-    summary_loaded = true;
-  });
-
