--- a/app/views/partials/profile.haml
+++ b/app/views/partials/profile.haml
@@ -2,10 +2,10 @@
   %li.dropdown
     -user = current_user
     -if user
-      %a.dropdown-toggle{data: {"internal": "true"}, href: "#", role: "button", aria: { haspopup: "true", expanded: "false"}, data: { toggle: "dropdown"}}
+      %a{data: {"internal": "true"}, href: "#", role: "button", aria: { haspopup: "true", expanded: "false"}, data: { toggle: "dropdown"}}
         =user.username
         %span.caret
-      %ul.dropdown-menu
+      %ul
         %li
           %a{data: {"internal": "true"}, href: "#{url_for("/profile")}"}
             Profile
