styling on artist page

--- a/app/views/artist.haml
+++ b/app/views/artist.haml
@@ -1,8 +1,11 @@
-!=haml :"partials/artist", locals: { artist: artist, admin: true, use_small: false }
-.artist
-  .summary#summary
-    =summary['summary']
-    %a{target: "_", href:"#{summary['url']}"}
-      \...more at wikipedia
+.twocol
+  .col
+    !=haml :"partials/artist", locals: { artist: artist, admin: true, use_small: false }
+  .col
+    .artist
+      .summary#summary
+        =summary['summary']
+        %a{target: "_", href:"#{summary['url']}"}
+          \...more at wikipedia
 -albums.each do |album|
   !=haml :"partials/album", locals: { album: album}
