--- a/app/views/layout.html.haml
+++ b/app/views/layout.html.haml
@@ -37,7 +37,7 @@
           %li
             %span.navbar-info
     .container#content
-      =yield
+      !=yield
       %div.row
         %div.twelvecol
           %div.container.footer
