--- a/app/views/artist.html.haml
+++ b/app/views/artist.html.haml
@@ -3,7 +3,7 @@
 .albums
   -artist.albums.to_a.select{|album| album.tracks.size > 0}.each do |album|
     %a.item{href: "#{url_for("/album/#{album.id}")}"}
-      %img.artist{title: "#{album.title}", src: "/images/#{album.image_path}"}
+      %img.artist{title: "#{album.title}", src: "https://patf.com/images/#{album.image_path}"}
 
 .edit
   %a.item{href: "#{url_for("/admin/artist/#{artist.id}")}"}
