--- a/app/views/partials/player.haml
+++ b/app/views/partials/player.haml
@@ -1,6 +1,4 @@
-#player-container
 -unless !current_user || admin_url.nil?
-  .edit
+  .btn
     %a.item{href: "#{admin_url}", data: {"internal": "true"} }
       Edit
-:javascript
