mobile friendly music player

--- a/public/css/player2.css
+++ b/public/css/player2.css
@@ -106,8 +106,7 @@ body {
 }
 
 .now-playing {
-    display: flex;
-    align-items: center;
+    display: none;
 }
 
 .track-info {
@@ -238,3 +237,19 @@ body {
 #tracklist {
  margin-top:46px;
 }
+
+.time-display {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .now-playing {
+      display: flex;
+      align-items: center;
+  }
+
+  .time-display {
+    display: inline-block;
+  }
+}
+
