--- a/app/views/admin/album.haml
+++ b/app/views/admin/album.haml
@@ -54,15 +54,16 @@
   .col-md-6
     Title
 -model.tracks.sort_by{|x| x.track_number.to_i}.each do |track|
+  -base_track_url = url_for("/admin/track/#{track.id}")
   %form{class: "trackform#{track.id}"}
     .row.no-pad
       .col-md-1
-        %input.col-md-4.form-control{type: 'text', name: 'track_number', value: "#{track.track_number}" , onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_track('#{base_url}', '#{track.id}')}"}
+        %input.col-md-4.form-control{type: 'text', name: 'track_number', value: "#{track.track_number}" , onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_track('#{base_track_url}', '#{track.id}')}"}
       .col-md-1
-        %input.col-md-4.form-control{type: 'text', name: 'album_id', value: "#{track.album_id}" , onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_track('#{base_url}', '#{track.id}')}"}
+        %input.col-md-4.form-control{type: 'text', name: 'album_id', value: "#{track.album_id}" , onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_track('#{base_track_url}', '#{track.id}')}"}
       .col-md-1
-        %input.col-md-4.form-control{type: 'text', name: 'artist_id', value: "#{track.artist_id}" , onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_track('#{base_url}', '#{track.id}')}"}
+        %input.col-md-4.form-control{type: 'text', name: 'artist_id', value: "#{track.artist_id}" , onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_track('#{base_track_url}', '#{track.id}')}"}
       .col-md-6
-        %input.form-control{type: 'text', name: 'title', value: "#{track.title}", onFocus: "this.dirty=false;", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_track('#{base_url}', '#{track.id}')}"}
+        %input.form-control{type: 'text', name: 'title', value: "#{track.title}", onFocus: "this.dirty=false;", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_track('#{base_track_url}', '#{track.id}')}"}
       .col-md-1
-        %input.btn.btn-warning{type: 'button', onClick:"if(confirm('delete track?')) {delete_track('#{base_url}', '#{track.id}')}", value: "delete"}
+        %input.btn.btn-warning{type: 'button', onClick:"if(confirm('delete track?')) {delete_track('#{base_track_url}', '#{track.id}')}", value: "delete"}
