bug in javascript for tag removal

--- a/app/views/partials/tags.haml
+++ b/app/views/partials/tags.haml
@@ -3,5 +3,5 @@
     .input-group.input-group-lg
       %input.form-control{type:"text", name:"name", value: "#{tag.name}"} 
     .input-group.input-group-lg
-      %input.btn.btn-warning{type: 'button', onClick:"if(confirm('remove tag?')) { remove_tag(#{base_url}/#{tag.id}", "#{tag.id}"), value: "X"}
+      %input.btn.btn-warning{type: 'button', onClick:"if(confirm('remove tag?')) { remove_tag('#{base_url}/#{tag.id}', '#{tag.id}') }", value: "X"}
   var url = "; 
