remove n+1 queries for getting random artists with images and albums

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -1,2 +1,2 @@
--artists.to_a.select{|artist| artist.albums.size > 0}.each do |artist|
+-artists.each do |artist|
   !=haml :"partials/artist", locals: {artist: artist, admin: false, use_small: true}
